test/test32.error
Error: trying to use a void type in an expression on line 5 of file 'test/test32.bas'
