test/test32.bas
sub p() as void
end

sub main()
    let vacuum = p()
end
